test/functions/deitz/nested/test_nested_global1.good
test_nested_global1.chpl:17: error: unresolved call 'bar(C)'
